# VaultGate

./: .env.example  .gitignore  Anchor.toml  Cargo.toml  opencode.json  package.json
docs/: pda-schema.md
docs/superpowers/plans/: 2026-03-29-vault-core-impl-plan.md  2026-03-29-vault-core-stage1-plan.md
docs/superpowers/specs/: 2026-03-29-vault-core-design.md
files/: AGENTS.md  PRD.md  SKILL.md  SKILLS.md  VaultGate-Architecture-DevPlan.docx
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/admin/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/hooks/: useVaultState.ts  useWalletAdapter.ts
frontend/src/app/lib/: anchor.ts  idl.ts  rpc.ts
frontend/src/components/: Navbar.tsx  WalletContextProvider.tsx
oracle/: .env.example  .gitignore  README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
oracle/src/: anchor-client.ts  config.ts  fireblocks.ts  logger.ts  queue.ts  server.ts  types.ts  webhooks.ts  whitelist-syncer.ts
oracle/tests/: fireblocks.test.ts  queue.test.ts  webhooks.test.ts
programs/access-registry/: Cargo.toml
programs/access-registry/src/: errors.rs  events.rs  lib.rs  state.rs
programs/kyc-hook/: Cargo.toml
programs/kyc-hook/src/: errors.rs  events.rs  lib.rs
programs/vault-core/: Cargo.toml
programs/vault-core/src/: errors.rs  events.rs  lib.rs  state.rs  state.rs.bak
programs/vault-core/src/instructions/: admin.rs  claim_yield.rs  deposit.rs  fund_yield_reserve.rs  initialize_vault.rs  mod.rs  withdraw.rs
tests/: vault-core.test.ts
