[package]
name = "access-registry"
version = "0.1.0"
description = "VaultGate on-chain KYC whitelist — stores WalletRecord PDAs"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "access_registry"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
