[package]
name = "kyc-hook"
version = "0.1.0"
description = "VaultGate Transfer Hook — enforces KYC compliance on every token transfer"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "kyc_hook"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
spl-transfer-hook-interface = { workspace = true }
spl-tlv-account-resolution = { workspace = true }
spl-pod = { workspace = true }
access-registry = { path = "../access-registry", features = ["cpi"] }
vault-core = { path = "../vault-core", features = ["cpi"] }
